--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
  <body>
     <h1>I Really love coffee</h1>
     <p>Hello world!</p>
+    <p>Hello world!</p>
  </body>
 
  <img src="coffee.jpg" width=500/>
